# project

./: .gitignore  Dockerfile  README.md  alembic.ini  database.py  db.sqlite3  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  test.db
alembic/: env.py
alembic/versions/: 2025_04_28_0905-de43d9e27305_init_tables.py  2025_04_28_0912-34bdb57b0d31_init_new_tables.py  2025_04_28_0922-388b481751a1_merging_heads.py  2025_04_28_0959-b6d7f721fe83_change_hashed_password_to_bytes.py  2025_04_29_1953-81b416eae473_rename_name_to_username.py  2025_05_13_0047-c3f79c33c2b4_add_new_column.py  2025_05_13_0109-5a17200660a2_remove_image_mimetype.py
frontend/static/css/: base.css  place_card.css  places.css  profile.css  style.css
frontend/static/js/: main.js  token.js
frontend/templates/: base.html  index.html  my_places.html  place_list.html  profile.html
frontend/templates/place_card/: place_card.html
frontend/templates/places-in-list/: food.html  museums.html  theatres.html  walk.html
frontend/templates/places_in_list/: food.html  museums.html  theatres.html  walk.html
my_package/: main.py  places_views.py
my_package/api_v1/: demo_jwt_auth.py
my_package/api_v1/endpoints/: __init__.py  assistant.py  places.py  reviews.py  users.py  visited_places.py
my_package/api_v1/schemas/: __init__.py  place.py  review.py  user.py  visited_place.py
my_package/auth/: utils.py
my_package/core/: __init__.py  config.py  database.py
my_package/crud_package/: place.py  review.py  user.py  visited_place.py
users/: crud.py  schemas.py  views.py
(+6 files in other folders)
