[tool.poetry]
name = "web-project"
version = "0.1.0"
description = ""
authors = ["Olga Avduhina <olgaavduhina06@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "my_package" }]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pydantic-settings = "^2.8.1"
aiosqlite = "^0.21.0"
greenlet = "^3.2.0"
alembic = "^1.15.2"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"
uvicorn = "^0.34.2"
email-validator = "^2.2.0"
bcrypt = "^4.3.0"
black = "^25.1.0"
jinja2 = "^3.1.6"
yandexgptlite = "^0.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
